--- a/abc.html
+++ b/abc.html
@@ -11,4 +11,8 @@
     <h1>ajhdfjkashfksfhlsdf</h1>
 </body>
 
+<h1 style="color:Tomato;">Hello World</h1>
+<p style="color:DodgerBlue;">Lorem ipsum...</p>
+<p style="color:MediumSeaGreen;">Ut wisi enim...</p>
+
 </html>
