--- a/kobiet/chiu.html
+++ b/kobiet/chiu.html
@@ -1,36 +1,6 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="bluestyle.css">
-</head>
-
-<body>
-
-    <h1>Hello world!</h1>
-    <p>This is the first file in my new Git Repo.</p>
-    <p>A new line in our file!</p>
-
-
-    <h1>Hello world!</h1>
-    <p>This is the first file in my new Git Repo.</p>
-    <p>A new line in our file!</p>
-
-
-
-    <h1>Hello world!</h1>
-    <p>This is the first file in my new Git Repo.</p>
-    <p>A new line in our file!</p>
-
-    <h1>Hello world!</h1>
-    <p>This is the first file in my new Git Repo.</p>
-    <p>A new line in our file!</p>
-
-</body>
-
-</html>
-=======
 asdasdasd
->>>>>>> master
+thanhlongnguyen
+
+<h1 style="color:Tomato;">Hello World</h1>
+<p style="color:DodgerBlue;">Lorem ipsum...</p>
+<p style="color:MediumSeaGreen;">Ut wisi enim...</p>
